--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0A2840"
+    android:background="#005278"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="8dp"
         android:text="@string/fnt"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintStart_toEndOf="@+id/satImg"
         app:layout_constraintTop_toBottomOf="@+id/sunDt" />
 
@@ -25,118 +25,62 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:text="@string/fdt"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintStart_toEndOf="@+id/satImg"
         app:layout_constraintTop_toBottomOf="@+id/sunImg" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="@string/choose_location"
-        android:textColor="#FFC107"
-        android:textSize="30sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.401"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
-
-        <RadioButton
-            android:id="@+id/StPetersburg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/radiobutton1"
-            android:textColor="#FFC107" />
-
-        <RadioButton
-            android:id="@+id/Vilnius"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/radiobutton2"
-            android:textColor="#FFC107" />
-
-        <RadioButton
-            android:id="@+id/Tenerife"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/radiobutton3"
-            android:textColor="#FFC107" />
-    </RadioGroup>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="328dp"
-        android:layout_marginBottom="220dp"
         android:text="@string/city"
-        android:textColor="#FF5722"
-        android:textSize="15sp"
+        android:textColor="#FFC107"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="11dp"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
 
+        android:layout_marginTop="8dp"
         android:src="@drawable/rainy"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/guideline13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.416"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:text="@string/temperature"
-        android:textAlignment="viewStart"
-        android:textColor="#FF9800"
+        android:textAlignment="textStart"
+        android:textColor="#FFC107"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="197dp"
-        android:layout_marginBottom="222dp"
         android:text="@string/humidity"
-        android:textAlignment="viewStart"
-        android:textColor="#FF9800"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        android:textAlignment="textStart"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -146,9 +90,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/pressure"
-        android:textColor="#FF9800"
+        android:textAlignment="textStart"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -156,31 +101,20 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="@string/precipitation"
-        android:textColor="#FF9800"
+        android:textAlignment="textStart"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toStartOf="@+id/precip"
-        app:layout_constraintHorizontal_bias="0.148"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/condition"
-        android:textColor="#FF9800"
-        app:layout_constraintEnd_toStartOf="@+id/wCond"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/forecast"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="430dp"
         android:text="@string/weatherForecast"
         android:textAlignment="center"
@@ -189,118 +123,93 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/guideline13" />
 
     <TextView
         android:id="@+id/temp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginEnd="5dp"
         android:text="@string/cityTemp"
         android:textAlignment="viewEnd"
-        android:textColor="#FF9800"
-        app:layout_constraintBottom_toTopOf="@+id/humid"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/humid"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="214dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="8dp"
         android:text="@string/cityHumid"
         android:textAlignment="viewEnd"
-        android:textColor="#FF9800"
-        app:layout_constraintBottom_toTopOf="@+id/pressure"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/temp" />
 
     <TextView
         android:id="@+id/pressure"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="185dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginTop="8dp"
         android:text="@string/cityPressure"
         android:textAlignment="viewEnd"
-        android:textColor="#FF9800"
-        app:layout_constraintBottom_toTopOf="@+id/precip"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/humid" />
 
     <TextView
         android:id="@+id/precip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="218dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="@string/cityPrecep"
         android:textAlignment="viewEnd"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/pressure" />
-
-    <TextView
-        android:id="@+id/wCond"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="179dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/cityCond"
-        android:textAlignment="viewEnd"
-        android:textColor="#FF9800"
-        app:layout_constraintBottom_toTopOf="@+id/forecast"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/precip"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/friday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="42dp"
         android:text="@string/friday"
-        android:textColor="#FF9800"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="#FFC107"
+        app:layout_constraintEnd_toEndOf="@+id/frImg"
+        app:layout_constraintStart_toStartOf="@+id/frImg"
         app:layout_constraintTop_toBottomOf="@+id/forecast" />
 
     <TextView
         android:id="@+id/satturday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="33dp"
         android:text="@string/sat"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
+        app:layout_constraintEnd_toEndOf="@+id/satImg"
         app:layout_constraintStart_toEndOf="@+id/friday"
+        app:layout_constraintStart_toStartOf="@+id/satImg"
         app:layout_constraintTop_toBottomOf="@+id/forecast" />
 
     <TextView
         android:id="@+id/sunday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="39dp"
         android:text="@string/sunday"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
+        app:layout_constraintEnd_toEndOf="@+id/sunImg"
         app:layout_constraintStart_toEndOf="@+id/satturday"
+        app:layout_constraintStart_toStartOf="@+id/sunImg"
         app:layout_constraintTop_toBottomOf="@+id/forecast" />
 
     <ImageView
@@ -343,7 +252,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:text="@string/fdt"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frImg" />
 
@@ -354,7 +263,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/fnt"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fridayDt" />
 
@@ -365,7 +274,7 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="3dp"
         android:text="@string/fdt"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintStart_toEndOf="@+id/frImg"
         app:layout_constraintTop_toBottomOf="@+id/satImg" />
 
@@ -376,8 +285,48 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="@string/fnt"
-        android:textColor="#FF9800"
+        android:textColor="#FFC107"
         app:layout_constraintStart_toEndOf="@+id/frImg"
         app:layout_constraintTop_toBottomOf="@+id/satDt" />
+
+    <Button
+        android:id="@+id/chgCity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FAED7C"
+        android:text="@string/chgCity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FAED7C"
+        android:text="@string/settings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.50121653" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
